updated .gitignore + changed Kart to kart renderable file

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,38 @@
 */*/build/*/*
 */CMakeFiles/*
 */*/CMakeFiles/*
+practicals/practical1/CMakeLists.txt
+practicals/practical1/cmake/
+practicals/practical1/fonts/
+practicals/practical1/gcc493.sh
+practicals/practical1/shaders/
+practicals/practical1/src/CMakeLists.txt
+practicals/practical1/src/CMakeLists.txt.user
+practicals/practical1/src/Makefile
+practicals/practical5/CMakeLists.txt
+practicals/practical5/cmake/
+practicals/practical5/fonts/
+practicals/practical5/gcc493.sh
+practicals/practical5/meshes/
+practicals/practical5/shaders/
+practicals/practical5/src/#practical_05_scene.cpp#
+practicals/practical5/src/TAGS
+practicals/practical5/src/dynamics/ConstantForceField.cpp~
+practicals/practical5/src/dynamics/EulerExplicitSolver.cpp~
+practicals/practical5/src/dynamics/Particle.cpp~
+practicals/practical5/src/dynamics/SpringForceField.cpp~
+practicals/practical5/src/practical_05_scene.cpp~
+CMakeFiles/2.8.12.2/CMakeCCompiler.cmake
+project/build/*/*
+project/build/*/*/*
+project/build/*
+project/build/*/*/*/*
+*/*~
+*/*#
+*/*/*~
+*/*/*#
+*/*/*/*~
+*/*/*/*#
+*/*/*/*/*~
+*/*/*/*/*#
+
